# sciodb

./: .gitignore  .travis.yml  README.md  TODO.md  pom.xml  tasks.md
.github/workflows/: maven.yml
doc/: Readme.md
ext-libs/: wt.sh
ext-libs/rocksdb-libs/: install-rocksdb.sh
scio-cli/: pom.xml
scio-cli/src/main/java/: QLLexer.g4  QLParser.g4
scio-cli/src/main/java/org/sciodb/shell/: Console.java
src/it/java/org/sciodb/server/: ServerSocketITTest.java
src/it/java/org/sciodb/storages/impl/: RocksDBEngineITTest.java
src/main/java/org/sciodb/: Client.java  Kernel.java  ScioDB.java
src/main/java/org/sciodb/exceptions/: CommunicationException.java  EmptyDataException.java  SeedException.java  ServerException.java  StorageException.java
src/main/java/org/sciodb/messages/: Decoder.java  EchoMessage.java  Encoder.java  Header.java  Message.java  MessageHeader.java  OperationUpdate.java  Operations.java
src/main/java/org/sciodb/messages/impl/: ContainerMessage.java  EchoMessage.java  GenericMessage.java  Header.java  Node.java  NodeListMessage.java  NodeMessage.java  NodesMessage.java
src/main/java/org/sciodb/rox/: ChangeRequest.java  NioServerBeta.java  Worker.java
src/main/java/org/sciodb/server/: AbstractSocket.java  ChangeRequest.java  Kernel.java  MessageReader.java  NodeCommunicationReader.java  NodeSharedInfo.java  OneMasterTopology.java  ServerSocket.java  SocketsThreadPool.java  Topology.java  TopologySocket.java
src/main/java/org/sciodb/server/nessy/: NodeMapper.java  NodeOperations.java  Roles.java  Status.java  TopologyContainer.java  TopologyRunnable.java
src/main/java/org/sciodb/server/services/: Command.java  Dispatcher.java  EchoCommand.java  EchoOperation.java  EchoService.java  Operations.java  Services.java  StatusCommand.java  StatusOperation.java  StatusService.java
src/main/java/org/sciodb/shell/: ScioSchell.java
src/main/java/org/sciodb/storages/: StorageEngine.java
src/main/java/org/sciodb/storages/engines/: InMemoryStorage.java  WiredTiger.java
src/main/java/org/sciodb/storages/impl/: InMemoryStorage.java  RocksDBEngine.java
src/main/java/org/sciodb/storages/models/: CollectionInfo.java  DatabaseInfo.java  Document.java
src/main/java/org/sciodb/topology/: Net.java  NodeMapper.java  NodeOperations.java  P2PNetImpl.java  Position.java  Status.java  TopologyContainer.java  TopologyRunnable.java  TreeNetImpl.java
src/main/java/org/sciodb/topology/impl/: MatrixNetImpl.java  NodeMapper.java  P2PNetImpl.java  RoutingNode.java  RoutingTable.java  TreeNetImpl.java
src/main/java/org/sciodb/topology/models/: Triple.java
src/main/java/org/sciodb/utils/: ByteUtils.java  CommandEncoder.java  Configuration.java  FileUtils.java  GUID.java  IpDiscover.java  LocalIPChecker.java  NodeMapper.java  ScioDBConstants.java  SeedUtils.java  ServerException.java  SocketClient.java  StorageException.java  StringUtils.java  TcpClient.java  ThreadUtils.java
src/main/java/org/sciodb/utils/models/: Command.java  EchoCommand.java  Operations.java  StatusCommand.java
src/main/resources/: log4j.properties  log4j2.xml  node-sciodb.json  node1.json  node2.json  node3.json  node4.json  node5.json  root.json  sciodb-application.properties  sciodb-application.yaml
src/main/shellscript/: startup.sh  stop.sh
src/test/java/org/sciodb/: KernelTest.java  ScioDBTest.java
src/test/java/org/sciodb/messages/: DecoderTest.java  EncoderTest.java  HeaderTest.java
src/test/java/org/sciodb/messages/impl/: EchoMessageTest.java  HeaderTest.java  NodeMessageTest.java  NodeTest.java
src/test/java/org/sciodb/server/: ServerSocketTest.java
src/test/java/org/sciodb/storages/impl/: RocksDBEngineTest.java
src/test/java/org/sciodb/topology/: NodeOperationsTest.java  P2PNetImplTest.java  TopologyRunnableTest.java  TreeNetImplTest.java
src/test/java/org/sciodb/topology/impl/: MatrixNetImplTest.java  P2PNetImplTest.java  RoutingTableTest.java  TreeNetImplTest.java
src/test/java/org/sciodb/utils/: ByteUtilsTest.java  GUIDTest.java  IpDiscoverTest.java  LocalIPCheckerTest.java  SeedUtilsTest.java  StringUtilsTest.java
wiredtiger_2_8_0/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
wiredtiger_2_8_0/api/leveldb/: Makefile.in
wiredtiger_2_8_0/bench/wtperf/: Makefile.in
wiredtiger_2_8_0/build_posix/: config.hin
wiredtiger_2_8_0/examples/c/: Makefile.in
wiredtiger_2_8_0/examples/java/: Makefile.in
wiredtiger_2_8_0/ext/collators/reverse/: Makefile.in
wiredtiger_2_8_0/ext/collators/revint/: Makefile.in
wiredtiger_2_8_0/ext/compressors/lz4/: Makefile.in
wiredtiger_2_8_0/ext/compressors/nop/: Makefile.in
wiredtiger_2_8_0/ext/compressors/snappy/: Makefile.in
wiredtiger_2_8_0/ext/compressors/zlib/: Makefile.in
wiredtiger_2_8_0/ext/datasources/helium/: Makefile.in
wiredtiger_2_8_0/ext/encryptors/nop/: Makefile.in
wiredtiger_2_8_0/ext/encryptors/rotn/: Makefile.in
wiredtiger_2_8_0/ext/extractors/csv/: Makefile.in
wiredtiger_2_8_0/ext/test/kvs_bdb/: Makefile.in
wiredtiger_2_8_0/lang/java/: AllJunitTests  Makefile.in  wiredtiger_wrap.c
wiredtiger_2_8_0/lang/java/src/com/wiredtiger/db/: AsyncOp.java  AsyncOpType.java  Connection.java  Cursor.java  SearchStatus.java  Session.java  wiredtiger.java  wiredtigerConstants.java  wiredtigerJNI.java
wiredtiger_2_8_0/lang/python/: Makefile.in  wiredtiger_wrap.c
wiredtiger_2_8_0/lang/python/wiredtiger/: __init__.py
wiredtiger_2_8_0/src/docs/: changelog.md
wiredtiger_2_8_0/test/bloom/: Makefile.in
wiredtiger_2_8_0/test/checkpoint/: Makefile.in
wiredtiger_2_8_0/test/cursor_order/: Makefile.in
wiredtiger_2_8_0/test/fops/: Makefile.in
wiredtiger_2_8_0/test/huge/: Makefile.in
wiredtiger_2_8_0/test/manydbs/: Makefile.in
wiredtiger_2_8_0/test/readonly/: Makefile.in
wiredtiger_2_8_0/test/recovery/: Makefile.in
wt-libs/: libwiredtiger.dylib  libwiredtiger.la  libwiredtiger.lai  wt
